chore: update to jdk-23